--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ sentence-transformers==2.2.2
 scikit-learn==1.2.2
 faiss-cpu==1.7.4
 hdbscan==0.8.29
-streamlit==1.25.0 
+streamlit==1.25.0
+psutil>=5.9.0 
