--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,8 @@ scikit-learn==1.2.2
 faiss-cpu==1.7.4
 hdbscan==0.8.29
 streamlit==1.25.0
-psutil>=5.9.0 
+psutil>=5.9.0
+pathlib==1.0.1
+tqdm==4.65.0
+umap-learn==0.5.3
+matplotlib==3.7.1 
