--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
-pandas==2.0.0
-numpy==1.24.3
+fastapi>=0.89.1
+uvicorn>=0.23.2
+pandas>=1.5.3
+numpy>=1.24.2
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.21.0  # For improved performance with fuzzywuzzy
+transformers>=4.28.1  # For DistilBART model
+torch>=2.0.0  # Required for transformers
+pydantic>=1.10.8  # Used by FastAPI for data validation
+tqdm>=4.65.0  # For progress bars
+scikit-learn>=1.2.2  # For clustering and similarity metrics
 requests==2.31.0
 sentence-transformers==2.2.2
-scikit-learn==1.2.2
 faiss-cpu==1.7.4
 hdbscan==0.8.29
 streamlit==1.25.0
 psutil>=5.9.0
 pathlib==1.0.1
-tqdm==4.65.0
 umap-learn==0.5.3
-matplotlib==3.7.1 
+matplotlib==3.7.1
+apscheduler==3.10.4
+plotly==5.18.0
+python-multipart==0.0.6 
